--- a/work-2.html
+++ b/work-2.html
@@ -25,6 +25,7 @@
 
           const result = JSON.parse(xhr.responseText);
           console.dir(typeof result);
+          console.dir(result);
         }
       });
     </script>
