--- a/work-2.html
+++ b/work-2.html
@@ -26,6 +26,7 @@
           const result = JSON.parse(xhr.responseText);
           console.dir(typeof result);
           console.dir(result);
+          console.log(result.response.body.items);
         }
       });
     </script>
