--- a/work-2.html
+++ b/work-2.html
@@ -27,6 +27,7 @@
           console.dir(typeof result);
           console.dir(result);
           console.log(result.response.body.items);
+          console.log(result.response.body.items[0].hsptlNm);
         }
       });
     </script>
